Footer (About GitCommitShow) line spacing and height Fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1165,11 +1165,12 @@ html,body{
 	font-family: 'Work Sans', sans-serif;
 	font-weight: normal;
 	box-shadow: 0px -10px 20px rgba(0, 0, 0, 0.75);
+	
 }
 #footer .footer-child span {
 	text-align: center;
 	font-size: 14px;
-	line-height: 15px;
+	line-height: 18px;
 	padding-top: 15px;
 }
 #footer .footer-child h3{
@@ -1188,6 +1189,11 @@ html,body{
 	-webkit-transform: scale(1.2);
 	    -ms-transform: scale(1.2);
 	        transform: scale(1.2);
+}
+.footer-item {
+    text-align: center;
+	font-size: initial;
+	line-height: 1.5;
 }
 .mobile-hide{
 	display: block;
